--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
 
 			 <p class="home___mainbox-text">Right now, I'm spending my free time studying Java, Machine learning, and growing my skills. </p>
  
-       <p class="home___mainbox-text"> My key skills Include: 3 years of hands-on experience in Python and 2 years of experience with Java specializing in problem solving, Machine Learning, Deep Learning, LLM, OpenCV, AwS( $3, EC2 ), Linux, and Computer Networks, 00P's.</a>. </p>
+       <p class="home___mainbox-text"> My key skills Include: 3 years of hands-on experience in Python and 2 years of experience with Java specializing in problem solving, Machine Learning, Deep Learning, LLM, OpenCV, AwS( S3, EC2 ), Linux, and Computer Networks, 00P's.</a>. </p>
 
 
 			 <p class="home___mainbox-text">Let's chat! DM me on Twitter, <a href="http://twitter.com/DivyanshKhare13">Divyansh Khare</a>. </p>
