--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       </div>
       <center>
     <div id="home__links">
-        <p class="home___link-text"><a href="https://equatorial-canopy-fa0.notion.site/Python-f33b7250bac048648ffbe0858e351936">Here is my thaught about Python</a></p>
+        <p class="home___link-text"><button><a href="https://www.notion.so/Python-f33b7250bac048648ffbe0858e351936?pvs=4">Here is my thaught about Python</a></button></p>
         </div></center>
-        <p class="home___link-text"><a href="about.html">About Me</a><a>&emsp;</a> <a href="Projects.html">Activities</a></p>
+        <p class="home___link-text"><button><a href="about.html">About Me</a></button> <a>&emsp;</a> <button><a href="Projects.html">Activities</a></button></p>
     </div>
   </div>
   </div>
