--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
   <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154710519-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-35J9FNRR1R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-154710519-1');
-  </script>
+  gtag('config', 'G-35J9FNRR1R');
+</script>
 
 </head>
 
