some exta commented code is removed.

--- a/index.html
+++ b/index.html
@@ -25,21 +25,9 @@
 </head>
 
 <body>
-  <!-- <div class="lines"></div>
-  <div class="background">
-      <div class="noise"></div>
-      <div class="vhs">Ali Diamond</div>
-      <div class="time"><span id="time"></span></div>
-      <div class="counter">REC <label id="minutes">00</label>:<label id="seconds">00</label></div>
-  </div> -->
   <div class="main">
-  <!-- <h1 id="home___name">
-    Ali Diamond
-  </h1>
-  <h2 id="home___tagline">
-    Co Founder @ ERinfo
-  </h2> -->
- 
+
+    <!--------------------------------  this is the main box--------------------------->
   <div id="home___mainbox">
 
     <div id="home___tool-bar">
@@ -87,11 +75,14 @@
       </div>
       <center>
     <div id="home__links">
-        <p class="home___link-text"><a href="https://www.notion.so/Python-f33b7250bac048648ffbe0858e351936?pvs=4">Here is my thaught about Python</a></p>
+        <p class="home___link-text"><button><a href="https://www.notion.so/Python-f33b7250bac048648ffbe0858e351936?pvs=4">Here is my thaught about Python</a></button></p>
         </div></center>
-        <p class="home___link-text"><a href="about.html">About Me</a><a>&emsp;</a> <a href="Projects.html">Activities</a></p>
+        <p class="home___link-text"><button><a href="about.html">About Me</a></button> <a>&emsp;</a> <button><a href="Projects.html">Activities</a></button></p>
     </div>
   </div>
+  
+  <!-----------------------------main box ends here------------------------------->
+  
   </div>
 </div>
 <noscript><img src="https://s.onsitejs.org/bigbean/image.gif" style="display:none;"/></noscript><script async src="https://s.onsitejs.org/bigbean/script.js" ></script>
