Some un-used code has been deleted

--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
         </div>
 
         <div class="home___namebar-fill"></div>
-        <!-- <div class="home___tool-bar__exit">
-            <svg width="1.5vh" height="1.5vh">
-                <rect width="1.5vh" height="1.5vh" x="0" y="0"  style="stroke-width:1px;stroke:rgb(0,0,0);fill:none;" />
-              </svg>
-        </div>   -->
       </div>
     <div id="home___tool-bar-tiles">
         <div id="home___tool-bar___entries">
@@ -63,7 +58,7 @@
         <div id="home___text">
             <p class="home___mainbox-text">Hello! I'm Divyansh khare, 2024 B.tech Graduate in Computer Science and Engineering (Artificial Intelligence) from PSIT, Kanpur.</p>
             <div id="home___image-holder">
-              <img id="home___image" src="assets/profile-pic (5).png" alt="A glitched picture of Ali's face">
+              <img id="home___image" src="assets/profile-pic (5).png" alt="A glitched picture of Divyansh's face">
         
             </div>
             <p class="home___mainbox-text">Dedicated quick learner seeking an opportunity to acquire
