--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
             </div>
             <p class="home___mainbox-text">Dedicated quick learner seeking an opportunity to acquire
-              and implement the experience and knowledge of the Computer Science field and wish to gain a strong technical foundation while fulfilling the organization s goals.</p>
+              and implement the experience and knowledge of the Computer Science field and wish to gain a strong technical foundation while fulfilling the organization's goals.</p>
             <p class="home___mainbox-text"></a></p>
             
 
